Fixed white line on mobile devices 2

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -9,7 +9,7 @@ body {
 }
 Header,
 Footer {
-  height: 5%;
+  height: 5vh;
   z-index: 20;
 }
 
